

    <!-- Campo TogetherNotes -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/blue"
    android:id="@+id/backLayout">
    <include
        layout="@layout/logo_reusable"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <!-- Campo de correo electrónico -->
        <EditText
            android:id="@+id/spaceMail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="20dp"
            android:fontFamily="@font/inter_18pt_bold"
            android:textColorHint="@color/hint_color"
            android:inputType="textEmailAddress"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />
        <EditText
            android:id="@+id/spaceName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="20dp"
            android:fontFamily="@font/inter_18pt_bold"
            android:textColorHint="@color/hint_color"
            android:inputType="textEmailAddress"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />


        <!-- Campo de contraseña -->
        <EditText
            android:id="@+id/spacePassword"
            android:layout_width="300dp"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_color"
            android:hint="@string/password"
            android:fontFamily="@font/inter_18pt_bold"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <!-- Campo de confirmación de contraseña -->
        <EditText
            android:id="@+id/spaceConfPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:padding="20dp"
            android:fontFamily="@font/inter_18pt_bold"
            android:textColorHint="@color/hint_color"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <!-- Campo de capacidad -->
        <EditText
            android:id="@+id/capacity"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/capacity"
            android:padding="20dp"
            android:fontFamily="@font/inter_18pt_bold"
            android:textColorHint="@color/hint_color"
            android:inputType="number"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <!-- Campo de ubicación (código postal) -->
        <EditText
            android:id="@+id/zipCode"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/zip_code"
            android:padding="20dp"
            android:fontFamily="@font/inter_18pt_bold"
            android:textColorHint="@color/hint_color"
            android:layout_gravity="center"
            android:inputType="text"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/location"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/choose_location"
                android:padding="20dp"
                android:fontFamily="@font/inter_18pt_bold"
                android:textColorHint="@color/hint_color"
                android:layout_gravity="center"
                android:focusable="false"
                android:cursorVisible="false"
                android:inputType="none"
                android:layout_marginBottom="16dp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/mapButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/button_border"/>

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="-5dp"
                    android:textSize="36dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="···"/>
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>



    <!-- Botón CREAR COMPTE -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <!-- Fondo con borde -->
        <ImageView

            android:id="@+id/contine_restaurant_button"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:src="@drawable/button_border"
            android:layout_marginLeft="35dp"/>

        <!-- Texto sobre el fondo -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/continued"
            android:textColor="@color/black" />

    </FrameLayout>

    <include
        layout="@layout/choose_location" />

</LinearLayout>