<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/createEventSol"
    android:layout_width="350dp"
    android:layout_height="450dp"
    android:visibility="gone"
    android:background="@drawable/default_rectangle">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/titolEvent"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/inter_18pt_bold"
            android:hint="@string/event_title"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColorHint="@color/hint_color" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/inter_18pt_bold"
            android:text="@string/work_accord"
            android:textColor="@color/hint_color"
            android:textSize="15dp" />

        <include
            layout="@layout/calendar_activity_mini"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <!-- Fondo con borde -->
            <ImageView
                android:id="@+id/confirm_event_info"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="-5dp"
                android:src="@drawable/button_border" />

            <!-- Texto sobre el fondo -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-7dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/request_date"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </FrameLayout>
    </LinearLayout>
</FrameLayout>